src/test/ui/parser/macros-no-semicolon-items.stderr
error: macros that expand to items must either be surrounded with braces or followed by a semicolon
  --> $DIR/macros-no-semicolon-items.rs:1:17
   |
LL | macro_rules! foo()
   |                 ^^

error: aborting due to previous error

